# shell

./: .clang-format  .envrc  .gitignore  CMakeLists.txt  README.md  app.tsx  config.ts  default.nix  env.d.ts  flake.nix  package-lock.json  package.json  run.fish  shell.qml  style.scss  tsconfig.json
.github/: CONTRIBUTING.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature.yml  issue.yml
.github/workflows/: release.yml  update-flake-inputs.yml
assets/: realtime-beat-detector.py
assets/cpp/: CMakeLists.txt  beat-detector.cpp  idle-inhibitor.cpp
components/: StateLayer.qml
components/controls/: CircularIndicator.qml  CircularProgress.qml  CustomSpinBox.qml  FilledSlider.qml  IconButton.qml  IconTextButton.qml  Menu.qml  SplitButton.qml  StyledBusyIndicator.qml  StyledRadioButton.qml  StyledScrollBar.qml  StyledSlider.qml  StyledSwitch.qml  StyledTextField.qml  TextButton.qml  VerticalSlider.qml
components/effects/: ColouredIcon.qml  Colouriser.qml  Elevation.qml  InnerBorder.qml
components/filedialog/: CurrentItem.qml  DialogButtons.qml  FileDialog.qml  FolderContents.qml  Sidebar.qml
components/images/: CachingIconImage.qml  CachingImage.qml
components/widgets/: ExtraIndicator.qml
config/: Appearance.qml  AppearanceConfig.qml  BackgroundConfig.qml  BarConfig.qml  Config.qml  DashboardConfig.qml  GeneralConfig.qml  LauncherConfig.qml  LockConfig.qml  NotifsConfig.qml  OsdConfig.qml  ServiceConfig.qml  SessionConfig.qml  UtilitiesConfig.qml
modules/: BatteryMonitor.qml  IdleMonitors.qml  Shortcuts.qml  bar.tsx  launcher.tsx  notifpopups.tsx  osds.tsx
modules/areapicker/: AreaPicker.qml  Picker.qml
modules/background/: Background.qml  Border.qml  DesktopClock.qml  Visualiser.qml  Wallpaper.qml
modules/bar/: ActiveWindow.qml  Bar.qml  BarWrapper.qml  Clock.qml  Content.qml  OsIcon.qml  Panel.qml  Pills.qml  Workspaces.qml
modules/controlcenter/: ControlCenter.qml  NavRail.qml  Panes.qml  Session.qml  WindowFactory.qml  WindowTitle.qml
modules/dashboard/: Background.qml  Content.qml  Dash.qml  Media.qml  Performance.qml  Tabs.qml  Wrapper.qml
modules/detachedcontent/: DetachedContent.qml  NavRail.qml  Panes.qml  Session.qml
modules/drawers/: Backgrounds.qml  Border.qml  Drawers.qml  Exclusions.qml  Interactions.qml  Panels.qml
modules/launcher/: ActionItem.qml  Actions.qml  AppItem.qml  AppList.qml  Background.qml  CalcItem.qml  Content.qml  ContentList.qml  EmptyIndicator.qml  Launcher.qml  M3Variants.qml  SchemeItem.qml  Schemes.qml  VariantItem.qml  WallpaperItem.qml  WallpaperList.qml  Wrapper.qml
modules/lock/: Backgrounds.qml  Buttons.qml  Center.qml  Clock.qml  Content.qml  Fetch.qml  Input.qml  InputField.qml  Lock.qml  LockSurface.qml  Media.qml  MediaPlaying.qml  NotifDock.qml  NotifGroup.qml  Notification.qml  Pam.qml  Resources.qml  Status.qml  WeatherInfo.qml
modules/notifications/: Background.qml  Content.qml  Notification.qml  Notifications.qml  Wrapper.qml
modules/osd/: Background.qml  Content.qml  Osd.qml  Wrapper.qml
modules/session/: Background.qml  Content.qml  Session.qml  Wrapper.qml
modules/sidebar/: Content.qml  Notif.qml  NotifActionList.qml  NotifDock.qml  NotifDockList.qml  NotifGroup.qml  NotifGroupList.qml  Wrapper.qml
modules/utilities/: Background.qml  Content.qml  RecordingDeleteModal.qml  Wrapper.qml
modules/windowinfo/: Buttons.qml  Details.qml  Preview.qml  WindowInfo.qml
nix/: default.nix  hm-module.nix
plugin/: CMakeLists.txt
plugin/src/Caelestia/: CMakeLists.txt  appdb.cpp  appdb.hpp  audiocollector.cpp  audiocollector.hpp  audioprovider.cpp  audioprovider.hpp  beattracker.cpp  beattracker.hpp  cachingimagemanager.cpp  cachingimagemanager.hpp  cavaprovider.cpp  cavaprovider.hpp  cutils.cpp  cutils.hpp  filesystemmodel.cpp  filesystemmodel.hpp  qalculator.cpp  qalculator.hpp  service.cpp  service.hpp  serviceref.cpp  serviceref.hpp  toaster.cpp  toaster.hpp
plugin/src/Caelestia/Internal/: CMakeLists.txt  cachingimagemanager.cpp  cachingimagemanager.hpp  circularindicatormanager.cpp  circularindicatormanager.hpp
plugin/src/Caelestia/Managers/: CMakeLists.txt
plugin/src/Caelestia/Models/: filesystemmodel.cpp  filesystemmodel.hpp
plugin/src/Caelestia/Services/: audiocollector.cpp  audiocollector.hpp  audioprovider.cpp  audioprovider.hpp  beattracker.cpp  beattracker.hpp  cavaprovider.cpp  cavaprovider.hpp  service.cpp  service.hpp  serviceref.hpp
scripts/: caelestia-avatar-picker.sh
scss/: _font.scss  _lib.scss  bar.scss  common.scss  launcher.scss  mediadisplay.scss  navbar.scss  notifications.scss  notifpopups.scss  osds.scss  session.scss  sidebar.scss  updates.scss  widgets.scss
scss/popdowns/: bluetoothdevices.scss  index.scss  media.scss  networks.scss  notifications.scss  sideleft.scss  sideright.scss  updates.scss
scss/scheme/: _default.scss  _latte.scss
services/: Apps.qml  Audio.qml  BeatDetector.qml  Bluetooth.qml  Brightness.qml  Cava.qml  Colours.qml  Drawers.qml  GameMode.qml  Hypr.qml  Hyprland.qml  IdleInhibitor.qml  Network.qml  Notifs.qml  Players.qml  Popouts.qml  Recorder.qml  SystemUsage.qml  Thumbnailer.qml  Visibilities.qml  Wallpapers.qml  Weather.qml  math.ts  monitors.ts  players.ts  updates.ts
src/config/: defaults.ts  funcs.ts  index.ts  literals.ts  types.ts
src/modules/: bar.tsx  launcher.tsx  launcher_old.tsx  navbar.tsx  notifications.tsx  notifpopups.tsx  osds.tsx  screencorners.tsx  session.tsx  updates.tsx
src/services/: apps.ts  calendar.ts  cpu.ts  (+12 more)
utils/: Icons.qml  Images.qml  Paths.qml  Searcher.qml  SysInfo.qml  constants.ts  icons.ts  mpris.ts  system.ts  widgets.tsx
widgets/: AnchorText.qml  Box.qml  BoxLayout.qml  CachingImage.qml  ClippingBox.qml  ClippingBoxLayout.qml  Colouriser.qml  CustomSpinBox.qml  DesktopClock.qml  ExtraIndicator.qml  Label.qml  LayerShadow.qml  MaterialIcon.qml  PaddedRect.qml  StateLayer.qml  StyledBusyIndicator.qml  StyledFlickable.qml  StyledListView.qml  StyledRect.qml  StyledScrollBar.qml  StyledSwitch.qml  StyledText.qml  StyledTextField.qml  StyledWindow.qml  VerticalSlider.qml
(+107 files in other folders)
